--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>INTRO ABOUT WHAT YOU HAVE DONE IN DATA SCIENCE. Check out my <a href="#work">work</a>.</p>
+								<p>This portfolio consists of some data science projects I have been working on. Some of my skill set which you will see in these projects include extensive knowledge of Python, SQL, Numpy, Pandas, Data Cleaning, blah, blah.  Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
