--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>This portfolio consists of some data science projects I have been working on. Some of my skill set which you will see in these projects include extensive knowledge of Python, SQL, Numpy, Pandas, Data Cleaning, blah, blah.  Check out my <a href="#work">work</a>.</p>
+								<p>This portfolio consists of my projects I have been working on. Some of my skill set which you will see in these projects include extensive knowledge of Python, SQL, Numpy, Pandas, Data Cleaning, blah, blah.  Check out my <a href="#work">work</a>.</p>
 							
 							</article>
 
@@ -54,16 +54,18 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 1</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 2</a></p>
-								<p>DESCRIBE PROJECT<br><a href="putlinkhere">PROJECT NAME 3</a></p>
+								<p>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.<br><a href="putlinkhere">Toxic Comment Identifier</a></p>
+								<p>Analyzed and provided visualizations to illustrate campaign features which significantly impact success or failure.<br><a href="putlinkhere">Kickstarter Campaign Analysis</a></p>
+								<p>Predicted the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.<br><a href="putlinkhere">MLB Winner Classifier</a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>PUT INFO ABOUT YOU HERE</p>
+								<p>I am the creator of Math Meeting, a successful Youtube channel where I teach all levels of mathematics. Using data analytics, I've driven the channel to over ___ views and 400,000+ subscribers. Math has always been my passion, and it has steered my interest to data science. I'm inspired by the power of math and its possibilities when applied to big data. <br>
+									<br>
+									Originally from the Fort Lauderdale area, I am a civil engineering graduate of the University of Florida. I currently live in the Boulder/Denver metro area. When I'm not making math videos or practicing data science, I enjoy rock climbing, running, and preparing for the arrival of my first-born son. </p>
 							</article>
 
 						<!-- Contact -->
