--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><a href="putlinkhere">Project - Toxic Comment Identifier</a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
+								<p><a href="putlinkhere"><u>Project - Toxic Comment Identifier</u></a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
 								<p><a href="putlinkhere">Toxic Comment Identifier</a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
 								<p>Analyzed and provided visualizations to illustrate campaign features which significantly impact success or failure.<br><a href="putlinkhere">Kickstarter Campaign Analysis</a></p>
 								<p>Predicted the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.<br><a href="putlinkhere">MLB Winner Classifier</a></p>
