--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p><a href="putlinkhere"><b>Project - Toxic Comment Identifier</b></a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
-								<p><a href="putlinkhere">Toxic Comment Identifier</a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
-								<p>Analyzed and provided visualizations to illustrate campaign features which significantly impact success or failure.<br><a href="putlinkhere">Kickstarter Campaign Analysis</a></p>
-								<p>Predicted the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.<br><a href="putlinkhere">MLB Winner Classifier</a></p>
+								<p><a href="putlinkhere"><b>Project - Kickstarter Campaign Analysis</b></a><br>Analyzed and provided visualizations to illustrate campaign features which significantly impact success or failure.</p>
+								<p><a href="putlinkhere"><b>Project - MLB Winner Classifier</b></a><br>Modeled the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.</p>
+								<p><a href="putlinkhere"><b>Project - A/B Testing</b></a><br>Demonstrated how to improve the success rate of kickstarter campagins using A/B testing.</p>
+								<p><a href="putlinkhere"><b>SQL self-sufficiency exam</b></a><br>Scored 100% when asked to write beginner to advanced level SQL queries.</p>
 							</article>
 
 						<!-- About -->
