--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p><a href="https://colab.research.google.com/drive/1k2JsIUcDvxOgYHkZ-1tPfSmSsOkkW6V9?usp=sharing"><b>Project - Toxic Comment Identifier</b></a><br>Parsed wikipedia comments, and implemented a model to identify the toxic comments deemed necessary for removal.</p>
 								<p><a href="https://github.com/cseber/cseber.github.io/blob/master/Portfolio%20-%20Kickstarter%20campaign%20analysis%20and%20data%20visualization.ipynb"><b>Project - Kickstarter Campaign Analysis</b></a><br>Analyzed and provided visualizations to illustrate campaign features which significantly impact success or failure.</p>
-								<p><a href="https://drive.google.com/file/d/1WwfY1O1seM05__RNaSjLzAPCmagH0IxI/view?usp=sharing"><b>Project - MLB Winner Classifier</b></a><br>Modeled the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.</p>
+								<p><a href="https://colab.research.google.com/drive/1WwfY1O1seM05__RNaSjLzAPCmagH0IxI?usp=sharing"><b>Project - MLB Winner Classifier</b></a><br>Modeled the winner of a baseball game with 70% accuracy,  often times the model choosing the underdog correctly.</p>
 								<p><a href="https://github.com/cseber/cseber.github.io/blob/master/Portfolio%20-%20AB%20Testing%20Project.ipynb"><b>Project - A/B Testing</b></a><br>Demonstrated how to improve the success rate of kickstarter campagins using A/B testing.</p>
 								<p><a href="https://github.com/cseber/SQL-self_sufficiency_exam/blob/master/SQL_self_sufficiency_exam"><b>SQL self-sufficiency exam</b></a><br>Scored 100% when asked to write beginner to advanced level SQL queries.</p>
 							</article>
