--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>This portfolio consists of my projects I have been working on. Some of my skill set which you will see in these projects include extensive knowledge of Python, SQL, Numpy, Pandas, Data Cleaning, blah, blah.  Check out my <a href="#work">work</a>.</p>
+								<p>Ever since I was a kid I have always had a passion for mathematics. As I have grown older this passion expanded into data science. As soon as I saw the power and applications of data science I was immediately hooked. This portfolio consists of some of my data science projects I have been working on. Some of my skill set which you will see in these projects include Python, SQL, Machine Learning, Supervised Learning, Unsupervised Learning, Statistical Modeling, PCA, Sklearn, Scipy, Pandas, Numpy, Natural Language Processing, NLTK, Spacy, Tensorflow/Keras, Neural Networks, Data Processing, Regression and Classification Modeling, Ensemble Modeling, Data Visualization, Data Exploration, Data Cleaning, Data Analysis, Matplotlib, Seaborn, and A/B testing.<br> Check out my work<a href="#work">here</a>.</p>
 							
 							</article>
 
@@ -65,7 +65,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am the creator of Math Meeting, a successful Youtube channel where I teach all levels of mathematics. Using data analytics, I've driven the channel to over ___ views and 400,000+ subscribers. Math has always been my passion, and it has steered my interest to data science. I'm inspired by the power of math and its possibilities when applied to big data. <br>
+								<p>I am the creator of Math Meeting, a successful Youtube channel where I teach all levels of mathematics. Using data analytics, I've driven the channel to over 120 million views and 400,000+ subscribers. Math has always been my passion, and it has steered my interest to data science. I'm inspired by the power of math and its possibilities when applied to big data. <br>
 									<br>
 									Originally from the Fort Lauderdale area, I am a civil engineering graduate of the University of Florida. I currently live in the Boulder/Denver metro area. When I'm not making math videos or practicing data science, I enjoy rock climbing, running, and preparing for the arrival of my first-born son. </p>
 							</article>
